gardle build to compile

--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,14 @@ buildscript {
   }
 }
 
+repositories {
+  mavenCentral()
+}
+
+dependencies {
+  compile "org.jetbrains.kotlin:kotlin-stdlib"
+}
+
 task hello() {
   description "say hello"
   doLast {
