--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,3 @@
-apply plugin: "kotlin"
-
 buildscript {
   ext.kotlin_version = "1.1.4"
 
@@ -11,6 +9,11 @@ buildscript {
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
   }
 }
+
+apply plugin: "kotlin"
+apply plugin: "application"
+
+mainClassName = "play_gradle.HelloKt"
 
 repositories {
   mavenCentral()
